[gz11] Use XML elements instead of attributes to fit SDF spec

--- a/examples/config/plugin_params.config
+++ b/examples/config/plugin_params.config
@@ -1,24 +1,26 @@
 <?xml version="1.0"?>
 
-<plugin
-  filename="Publisher"
-  title="Publisher 1"
-  show_dock_button="false"
-  x="9"
-  y="8"
-  z="10"
-  height="400"
-  width="250">
+<plugin filename="Publisher">
+  <ignition-gui>
+    <title>Publisher 1</title>
+    <show_dock_button>false</show_dock_button>
+    <x>9</x>
+    <y>60</y>
+    <z>10</z>
+    <height>400</height>
+    <width>250</width>
+  </ignition-gui>
 </plugin>
 
-<plugin
-  filename="Publisher"
-  title="Publisher 2"
-  show_title_bar="false"
-  resizable="false"
-  x="350"
-  y="8"
-  z="0"
-  height="500"
-  width="300">
+<plugin filename="Publisher">
+  <ignition-gui>
+    <title>Publisher 2</title>
+    <show_title_bar>false</show_title_bar>
+    <resizable>false</resizable>
+    <x>350</x>
+    <y>70</y>
+    <z>0</z>
+    <height>500</height>
+    <width>300</width>
+  </ignition-gui>
 </plugin>
