--- a/examples/config/pubsub.config
+++ b/examples/config/pubsub.config
@@ -4,5 +4,23 @@
   <width>600</width>
   <height>800</height>
 </window>
-<plugin filename="Publisher" x="9" y="50" z="0" height="400" width="250"/>
-<plugin filename="TopicEcho" x="275" y="50" z="0" height="687" width="300"/>
+
+<plugin filename="Publisher">
+  <ignition-gui>
+    <x>9</x>
+    <y>50</y>
+    <z>0</z>
+    <height>400</height>
+    <width>250</width>
+  </ignition-gui>
+</plugin>
+
+<plugin filename="TopicEcho">
+  <ignition-gui>
+    <x>275</x>
+    <y>50</y>
+    <z>0</z>
+    <height>687</height>
+    <width>300</width>
+  </ignition-gui>
+</plugin>
