--- a/examples/config/time.config
+++ b/examples/config/time.config
@@ -1,13 +1,13 @@
 <?xml version="1.0"?>
 
-<plugin
-  filename="WorldControl"
-  title="Controls: all"
-  x="40"
-  y="50"
-  height="120"
-  width="300"
->
+<plugin filename="WorldControl">
+  <ignition-gui>
+    <title>Controls: all</title>
+    <x>40</x>
+    <y>50</y>
+    <height>120</height>
+    <width>300</width>
+  </ignition-gui>
   <play_pause>true</play_pause>
   <step>true</step>
   <start_paused>false</start_paused>
@@ -15,39 +15,39 @@
   <stats_topic>/world_stats</stats_topic>
 </plugin>
 
-<plugin
-  filename="WorldControl"
-  title="Controls: play/pause"
-  x="40"
-  y="190"
-  height="120"
-  width="300"
->
+<plugin filename="WorldControl">
+  <ignition-gui>
+    <title>Controls: play/pause</title>
+    <x>40</x>
+    <y>190</y>
+    <height>120</height>
+    <width>300</width>
+  </ignition-gui>
   <play_pause>true</play_pause>
   <service>/world_control</service>
   <stats_topic>/world_stats</stats_topic>
 </plugin>
 
-<plugin
-  filename="WorldControl"
-  title="Controls: step"
-  x="40"
-  y="330"
-  height="120"
-  width="300"
->
+<plugin filename="WorldControl">
+  <ignition-gui>
+    <title>Controls: step</title>
+    <x>40</x>
+    <y>330</y>
+    <height>120</height>
+    <width>300</width>
+  </ignition-gui>
   <step>true</step>
   <service>/world_control</service>
 </plugin>
 
-<plugin
-  filename="WorldStats"
-  title="Stats: all"
-  x="500"
-  y="50"
-  height="180"
-  width="240"
->
+<plugin filename="WorldStats">
+  <ignition-gui>
+    <title>Stats: all</title>
+    <x>500</x>
+    <y>50</y>
+    <height>180</height>
+    <width>240</width>
+  </ignition-gui>
   <sim_time>true</sim_time>
   <real_time>true</real_time>
   <real_time_factor>true</real_time_factor>
@@ -55,27 +55,27 @@
   <topic>/world_stats</topic>
 </plugin>
 
-<plugin
-  filename="WorldStats"
-  title="Stats: time only"
-  x="500"
-  y="350"
-  height="180"
-  width="240"
->
+<plugin filename="WorldStats">
+  <ignition-gui>
+    <title>Stats: time only</title>
+    <x>500</x>
+    <y>350</y>
+    <height>180</height>
+    <width>240</width>
+  </ignition-gui>
   <sim_time>true</sim_time>
   <real_time>true</real_time>
   <topic>/world_stats</topic>
 </plugin>
 
-<plugin
-  filename="WorldStats"
-  title="Stats: RTF / it"
-  x="500"
-  y="650"
-  height="180"
-  width="240"
->
+<plugin filename="WorldStats">
+  <ignition-gui>
+    <title>Stats: RTF / it</title>
+    <x>500</x>
+    <y>650</y>
+    <height>180</height>
+    <width>240</width>
+  </ignition-gui>
   <real_time_factor>true</real_time_factor>
   <iterations>true</iterations>
   <topic>/world_stats</topic>
