generic property pass-through from SDF to QML

--- a/examples/config/plugin_params.config
+++ b/examples/config/plugin_params.config
@@ -1,26 +1,52 @@
 <?xml version="1.0"?>
 
 <plugin filename="Publisher">
+ <!-- Empty plugin, try saving the config and see how this gets populated -->
+</plugin>
+
+<plugin filename="Publisher">
+  <!--
+    All elements within <ignition-gui> are parsed by Ignition GUI and common to
+    all plugins.
+  -->
   <ignition-gui>
     <title>Publisher 1</title>
-    <show_dock_button>false</show_dock_button>
-    <x>9</x>
-    <y>60</y>
-    <z>10</z>
-    <height>400</height>
-    <width>250</width>
+
+    <!--
+      Properties passed directly to the QML card.
+      It includes:
+      * All Pane properties: https://doc.qt.io/qt-5/qml-qtquick-controls2-pane-members.html
+      * All custom properties within IgnCard.qml
+    -->
+    <property type="bool" key="showDockButton" value="false"/>
+    <property type="double" key="x" value="350"/>
+    <property type="double" key="y" value="60"/>
+    <property type="double" key="z" value="10"/>
+    <property type="double" key="height" value="400"/>
+    <property type="double" key="width" value="250"/>
+    <property type="bool" key="enabled" value="false"/>
   </ignition-gui>
 </plugin>
 
 <plugin filename="Publisher">
   <ignition-gui>
     <title>Publisher 2</title>
-    <show_title_bar>false</show_title_bar>
-    <resizable>false</resizable>
-    <x>350</x>
-    <y>70</y>
-    <z>0</z>
-    <height>500</height>
-    <width>300</width>
+    <property type="bool" key="showTitleBar" value="false"/>
+    <property type="bool" key="resizable" value="false"/>
+    <property type="double" key="x" value="700"/>
+    <property type="double" key="y" value="70"/>
+    <property type="double" key="z" value="0"/>
+    <property type="double" key="height" value="500"/>
+    <property type="double" key="width" value="300"/>
+    <property type="double" key="rotation" value="30"/>
+    <property type="double" key="scale" value="0.8"/>
   </ignition-gui>
 </plugin>
+
+<plugin filename="Publisher">
+  <ignition-gui>
+    <title>Hidden publisher</title>
+    <property type="bool" key="visible" value="false"/>
+  </ignition-gui>
+</plugin>
+
