--- a/examples/config/time.config
+++ b/examples/config/time.config
@@ -3,10 +3,10 @@
 <plugin filename="WorldControl">
   <ignition-gui>
     <title>Controls: all</title>
-    <x>40</x>
-    <y>50</y>
-    <height>120</height>
-    <width>300</width>
+    <property type="int" key="x" value="40"/>
+    <property type="int" key="y" value="50"/>
+    <property type="int" key="height" value="120"/>
+    <property type="int" key="width" value="300"/>
   </ignition-gui>
   <play_pause>true</play_pause>
   <step>true</step>
@@ -18,10 +18,10 @@
 <plugin filename="WorldControl">
   <ignition-gui>
     <title>Controls: play/pause</title>
-    <x>40</x>
-    <y>190</y>
-    <height>120</height>
-    <width>300</width>
+    <property type="int" key="x" value="40"/>
+    <property type="int" key="y" value="190"/>
+    <property type="int" key="height" value="120"/>
+    <property type="int" key="width" value="300"/>
   </ignition-gui>
   <play_pause>true</play_pause>
   <service>/world_control</service>
@@ -31,10 +31,10 @@
 <plugin filename="WorldControl">
   <ignition-gui>
     <title>Controls: step</title>
-    <x>40</x>
-    <y>330</y>
-    <height>120</height>
-    <width>300</width>
+    <property type="int" key="x" value="40"/>
+    <property type="int" key="y" value="330"/>
+    <property type="int" key="height" value="120"/>
+    <property type="int" key="width" value="300"/>
   </ignition-gui>
   <step>true</step>
   <service>/world_control</service>
@@ -43,10 +43,10 @@
 <plugin filename="WorldStats">
   <ignition-gui>
     <title>Stats: all</title>
-    <x>500</x>
-    <y>50</y>
-    <height>180</height>
-    <width>240</width>
+    <property type="int" key="x" value="500"/>
+    <property type="int" key="y" value="50"/>
+    <property type="int" key="height" value="180"/>
+    <property type="int" key="width" value="240"/>
   </ignition-gui>
   <sim_time>true</sim_time>
   <real_time>true</real_time>
@@ -58,10 +58,10 @@
 <plugin filename="WorldStats">
   <ignition-gui>
     <title>Stats: time only</title>
-    <x>500</x>
-    <y>350</y>
-    <height>180</height>
-    <width>240</width>
+    <property type="int" key="x" value="500"/>
+    <property type="int" key="y" value="350"/>
+    <property type="int" key="height" value="180"/>
+    <property type="int" key="width" value="240"/>
   </ignition-gui>
   <sim_time>true</sim_time>
   <real_time>true</real_time>
@@ -71,10 +71,10 @@
 <plugin filename="WorldStats">
   <ignition-gui>
     <title>Stats: RTF / it</title>
-    <x>500</x>
-    <y>650</y>
-    <height>180</height>
-    <width>240</width>
+    <property type="int" key="x" value="500"/>
+    <property type="int" key="y" value="650"/>
+    <property type="int" key="height" value="180"/>
+    <property type="int" key="width" value="240"/>
   </ignition-gui>
   <real_time_factor>true</real_time_factor>
   <iterations>true</iterations>
