--- a/examples/config/plugin_params.config
+++ b/examples/config/plugin_params.config
@@ -18,35 +18,35 @@
       * All Pane properties: https://doc.qt.io/qt-5/qml-qtquick-controls2-pane-members.html
       * All custom properties within IgnCard.qml
     -->
-    <property type="bool" key="showDockButton" value="false"/>
-    <property type="double" key="x" value="350"/>
-    <property type="double" key="y" value="60"/>
-    <property type="double" key="z" value="10"/>
-    <property type="double" key="height" value="400"/>
-    <property type="double" key="width" value="250"/>
-    <property type="bool" key="enabled" value="false"/>
+    <property type="bool" key="showDockButton">false</property>
+    <property type="double" key="x">350</property>
+    <property type="double" key="y">60</property>
+    <property type="double" key="z">10</property>
+    <property type="double" key="height">400</property>
+    <property type="double" key="width">250</property>
+    <property type="bool" key="enabled">false</property>
   </ignition-gui>
 </plugin>
 
 <plugin filename="Publisher">
   <ignition-gui>
     <title>Publisher 2</title>
-    <property type="bool" key="showTitleBar" value="false"/>
-    <property type="bool" key="resizable" value="false"/>
-    <property type="double" key="x" value="700"/>
-    <property type="double" key="y" value="70"/>
-    <property type="double" key="z" value="0"/>
-    <property type="double" key="height" value="500"/>
-    <property type="double" key="width" value="300"/>
-    <property type="double" key="rotation" value="30"/>
-    <property type="double" key="scale" value="0.8"/>
+    <property type="bool" key="showTitleBar">false</property>
+    <property type="bool" key="resizable">false</property>
+    <property type="double" key="x">700</property>
+    <property type="double" key="y">70</property>
+    <property type="double" key="z">0</property>
+    <property type="double" key="height">500</property>
+    <property type="double" key="width">300</property>
+    <property type="double" key="rotation">30</property>
+    <property type="double" key="scale">0.8</property>
   </ignition-gui>
 </plugin>
 
 <plugin filename="Publisher">
   <ignition-gui>
     <title>Hidden publisher</title>
-    <property type="bool" key="visible" value="false"/>
+    <property type="bool" key="visible">false</property>
   </ignition-gui>
 </plugin>
 
