--- a/examples/config/time.config
+++ b/examples/config/time.config
@@ -3,10 +3,10 @@
 <plugin filename="WorldControl">
   <ignition-gui>
     <title>Controls: all</title>
-    <property type="int" key="x" value="40"/>
-    <property type="int" key="y" value="50"/>
-    <property type="int" key="height" value="120"/>
-    <property type="int" key="width" value="300"/>
+    <property type="int" key="x">40</property>
+    <property type="int" key="y">50</property>
+    <property type="int" key="height">120</property>
+    <property type="int" key="width">300</property>
   </ignition-gui>
   <play_pause>true</play_pause>
   <step>true</step>
@@ -18,10 +18,10 @@
 <plugin filename="WorldControl">
   <ignition-gui>
     <title>Controls: play/pause</title>
-    <property type="int" key="x" value="40"/>
-    <property type="int" key="y" value="190"/>
-    <property type="int" key="height" value="120"/>
-    <property type="int" key="width" value="300"/>
+    <property type="int" key="x">40</property>
+    <property type="int" key="y">190</property>
+    <property type="int" key="height">120</property>
+    <property type="int" key="width">300</property>
   </ignition-gui>
   <play_pause>true</play_pause>
   <service>/world_control</service>
@@ -31,10 +31,10 @@
 <plugin filename="WorldControl">
   <ignition-gui>
     <title>Controls: step</title>
-    <property type="int" key="x" value="40"/>
-    <property type="int" key="y" value="330"/>
-    <property type="int" key="height" value="120"/>
-    <property type="int" key="width" value="300"/>
+    <property type="int" key="x">40</property>
+    <property type="int" key="y">330</property>
+    <property type="int" key="height">120</property>
+    <property type="int" key="width">300</property>
   </ignition-gui>
   <step>true</step>
   <service>/world_control</service>
@@ -43,10 +43,10 @@
 <plugin filename="WorldStats">
   <ignition-gui>
     <title>Stats: all</title>
-    <property type="int" key="x" value="500"/>
-    <property type="int" key="y" value="50"/>
-    <property type="int" key="height" value="180"/>
-    <property type="int" key="width" value="240"/>
+    <property type="int" key="x">500</property>
+    <property type="int" key="y">50</property>
+    <property type="int" key="height">180</property>
+    <property type="int" key="width">240</property>
   </ignition-gui>
   <sim_time>true</sim_time>
   <real_time>true</real_time>
@@ -58,10 +58,10 @@
 <plugin filename="WorldStats">
   <ignition-gui>
     <title>Stats: time only</title>
-    <property type="int" key="x" value="500"/>
-    <property type="int" key="y" value="350"/>
-    <property type="int" key="height" value="180"/>
-    <property type="int" key="width" value="240"/>
+    <property type="int" key="x">500</property>
+    <property type="int" key="y">350</property>
+    <property type="int" key="height">180</property>
+    <property type="int" key="width">240</property>
   </ignition-gui>
   <sim_time>true</sim_time>
   <real_time>true</real_time>
@@ -71,10 +71,10 @@
 <plugin filename="WorldStats">
   <ignition-gui>
     <title>Stats: RTF / it</title>
-    <property type="int" key="x" value="500"/>
-    <property type="int" key="y" value="650"/>
-    <property type="int" key="height" value="180"/>
-    <property type="int" key="width" value="240"/>
+    <property type="int" key="x">500</property>
+    <property type="int" key="y">650</property>
+    <property type="int" key="height">180</property>
+    <property type="int" key="width">240</property>
   </ignition-gui>
   <real_time_factor>true</real_time_factor>
   <iterations>true</iterations>
