experiment with state from XML, there's a timing issue with getting the background item

--- a/examples/config/scene3d.config
+++ b/examples/config/scene3d.config
@@ -36,3 +36,35 @@
     <color>0.2 0.2 0.2 1.0</color>
   </insert>
 </plugin-->
+
+<plugin filename="WorldControl">
+  <ignition-gui>
+    <title>Controls</title>
+    <property type="int" key="x">40</property>
+    <property type="int" key="y">50</property>
+    <property type="int" key="height">120</property>
+    <property type="int" key="width">300</property>
+    <property type="string" key="state">floating</property>
+  </ignition-gui>
+  <play_pause>true</play_pause>
+  <step>true</step>
+  <start_paused>false</start_paused>
+  <service>/world_control</service>
+  <stats_topic>/world_stats</stats_topic>
+</plugin>
+
+<plugin filename="WorldStats">
+  <ignition-gui>
+    <title>Stats</title>
+    <property type="int" key="x">500</property>
+    <property type="int" key="y">50</property>
+    <property type="int" key="height">180</property>
+    <property type="int" key="width">240</property>
+    <property type="string" key="state">floating</property>
+  </ignition-gui>
+  <sim_time>true</sim_time>
+  <real_time>true</real_time>
+  <real_time_factor>true</real_time_factor>
+  <iterations>true</iterations>
+  <topic>/world_stats</topic>
+</plugin>
