support floating -> docked -> floating changes, read from XML

--- a/examples/config/scene3d.config
+++ b/examples/config/scene3d.config
@@ -9,10 +9,11 @@
 <plugin filename="Scene3D">
     <ignition-gui>
       <title>View 1</title>
+      <!--property type="string" key="state">floating</property>
       <anchor line="right" target="window" target_line="right"/>
       <anchor line="left" target="window" target_line="left"/>
       <anchor line="top" target="window" target_line="top"/>
-      <anchor line="bottom" target="window" target_line="bottom"/>
+      <anchor line="bottom" target="window" target_line="bottom"/-->
     </ignition-gui>
     <engine>ogre</engine>
     <scene>scene</scene>
@@ -40,11 +41,13 @@
 <plugin filename="WorldControl">
   <ignition-gui>
     <title>Controls</title>
-    <property type="int" key="x">40</property>
-    <property type="int" key="y">50</property>
-    <property type="int" key="height">120</property>
-    <property type="int" key="width">300</property>
+    <property type="bool" key="showTitleBar">false</property>
+    <property type="bool" key="resizable">false</property>
+    <property type="double" key="z">1</property>
+
     <property type="string" key="state">floating</property>
+    <anchor line="left" target="window" target_line="left"/>
+    <anchor line="bottom" target="window" target_line="bottom"/>
   </ignition-gui>
   <play_pause>true</play_pause>
   <step>true</step>
@@ -53,18 +56,22 @@
   <stats_topic>/world_stats</stats_topic>
 </plugin>
 
-<plugin filename="WorldStats">
+<!--plugin filename="WorldStats">
   <ignition-gui>
     <title>Stats</title>
-    <property type="int" key="x">500</property>
-    <property type="int" key="y">50</property>
-    <property type="int" key="height">180</property>
-    <property type="int" key="width">240</property>
+    <property type="bool" key="showTitleBar">false</property>
+    <property type="bool" key="resizable">false</property>
+    <property type="double" key="height">110</property>
+    <property type="double" key="width">290</property>
+    <property type="double" key="z">1</property>
+
     <property type="string" key="state">floating</property>
+    <anchor line="right" target="window" target_line="right"/>
+    <anchor line="bottom" target="window" target_line="bottom"/>
   </ignition-gui>
   <sim_time>true</sim_time>
   <real_time>true</real_time>
   <real_time_factor>true</real_time_factor>
   <iterations>true</iterations>
   <topic>/world_stats</topic>
-</plugin>
+</plugin-->
