support anchoring to another plugin

--- a/examples/config/scene3d.config
+++ b/examples/config/scene3d.config
@@ -9,11 +9,7 @@
 <plugin filename="Scene3D">
     <ignition-gui>
       <title>View 1</title>
-      <!--property type="string" key="state">floating</property>
-      <anchor line="right" target="window" target_line="right"/>
-      <anchor line="left" target="window" target_line="left"/>
-      <anchor line="top" target="window" target_line="top"/>
-      <anchor line="bottom" target="window" target_line="bottom"/-->
+      <property type="string" key="state">docked</property>
     </ignition-gui>
     <engine>ogre</engine>
     <scene>scene</scene>
@@ -43,11 +39,15 @@
     <title>Controls</title>
     <property type="bool" key="showTitleBar">false</property>
     <property type="bool" key="resizable">false</property>
+    <property type="double" key="height">72</property>
+    <property type="double" key="width">121</property>
     <property type="double" key="z">1</property>
 
     <property type="string" key="state">floating</property>
-    <anchor line="left" target="window" target_line="left"/>
-    <anchor line="bottom" target="window" target_line="bottom"/>
+    <anchors target="View 1">
+      <line own="left" target="left"/>
+      <line own="bottom" target="bottom"/>
+    </anchors>
   </ignition-gui>
   <play_pause>true</play_pause>
   <step>true</step>
@@ -56,7 +56,7 @@
   <stats_topic>/world_stats</stats_topic>
 </plugin>
 
-<!--plugin filename="WorldStats">
+<plugin filename="WorldStats">
   <ignition-gui>
     <title>Stats</title>
     <property type="bool" key="showTitleBar">false</property>
@@ -66,12 +66,14 @@
     <property type="double" key="z">1</property>
 
     <property type="string" key="state">floating</property>
-    <anchor line="right" target="window" target_line="right"/>
-    <anchor line="bottom" target="window" target_line="bottom"/>
+    <anchors target="View 1">
+      <line own="right" target="right"/>
+      <line own="bottom" target="bottom"/>
+    </anchors>
   </ignition-gui>
   <sim_time>true</sim_time>
   <real_time>true</real_time>
   <real_time_factor>true</real_time_factor>
   <iterations>true</iterations>
   <topic>/world_stats</topic>
-</plugin-->
+</plugin>
