[gz11] Take some components out of IgnCard: rulers and settings

--- a/examples/config/pubsub.config
+++ b/examples/config/pubsub.config
@@ -7,20 +7,20 @@
 
 <plugin filename="Publisher">
   <ignition-gui>
-    <x>9</x>
-    <y>50</y>
-    <z>0</z>
-    <height>400</height>
-    <width>250</width>
+    <property type="int" key="x">9</property>
+    <property type="int" key="y">50</property>
+    <property type="int" key="z">0</property>
+    <property type="int" key="height">400</property>
+    <property type="int" key="width">250</property>
   </ignition-gui>
 </plugin>
 
 <plugin filename="TopicEcho">
   <ignition-gui>
-    <x>275</x>
-    <y>50</y>
-    <z>0</z>
-    <height>687</height>
-    <width>300</width>
+    <property type="int" key="x">275</property>
+    <property type="int" key="y">50</property>
+    <property type="int" key="z">0</property>
+    <property type="int" key="height">687</property>
+    <property type="int" key="width">300</property>
   </ignition-gui>
 </plugin>
