[gz11] Extend anchor logic so plugins can anchor to each other

--- a/examples/config/scene3d.config
+++ b/examples/config/scene3d.config
@@ -9,10 +9,12 @@
 <plugin filename="Scene3D">
     <ignition-gui>
       <title>View 1</title>
-      <anchor line="right" target="window" target_line="right"/>
-      <anchor line="left" target="window" target_line="left"/>
-      <anchor line="top" target="window" target_line="top"/>
-      <anchor line="bottom" target="window" target_line="bottom"/>
+      <anchors target="window">
+        <line own="right" target="right"/>
+        <line own="left" target="left"/>
+        <line own="top" target="top"/>
+        <line own="bottom" target="bottom"/>
+      </anchors>
     </ignition-gui>
     <engine>ogre</engine>
     <scene>scene</scene>
@@ -36,3 +38,45 @@
     <color>0.2 0.2 0.2 1.0</color>
   </insert>
 </plugin-->
+
+<plugin filename="WorldControl">
+  <ignition-gui>
+    <title>Controls</title>
+    <property type="bool" key="showTitleBar">false</property>
+    <property type="bool" key="resizable">false</property>
+    <property type="double" key="height">72</property>
+    <property type="double" key="width">121</property>
+    <property type="double" key="z">1</property>
+
+    <anchors target="View 1">
+      <line own="left" target="left"/>
+      <line own="bottom" target="bottom"/>
+    </anchors>
+  </ignition-gui>
+  <play_pause>true</play_pause>
+  <step>true</step>
+  <start_paused>false</start_paused>
+  <service>/world_control</service>
+  <stats_topic>/world_stats</stats_topic>
+</plugin>
+
+<plugin filename="WorldStats">
+  <ignition-gui>
+    <title>Stats</title>
+    <property type="bool" key="showTitleBar">false</property>
+    <property type="bool" key="resizable">false</property>
+    <property type="double" key="height">110</property>
+    <property type="double" key="width">290</property>
+    <property type="double" key="z">1</property>
+
+    <anchors target="View 1">
+      <line own="right" target="right"/>
+      <line own="bottom" target="bottom"/>
+    </anchors>
+  </ignition-gui>
+  <sim_time>true</sim_time>
+  <real_time>true</real_time>
+  <real_time_factor>true</real_time_factor>
+  <iterations>true</iterations>
+  <topic>/world_stats</topic>
+</plugin>
