--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -23,6 +23,7 @@ pipelines:
             qml-module-qtquick-layouts
             qml-module-qt-labs-folderlistmodel
             qml-module-qt-labs-settings
+            qml-module-qtgraphicaleffects
           - update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-8 800 --slave /usr/bin/g++ g++ /usr/bin/g++-8 --slave /usr/bin/gcov gcov /usr/bin/gcov-8
           - gcc -v
           - g++ -v
