fix cmake linking of test/display_plugins

--- a/test/display_plugins/CMakeLists.txt
+++ b/test/display_plugins/CMakeLists.txt
@@ -18,10 +18,7 @@ foreach (src ${plugins})
   QT5_WRAP_CPP(${src}_MOC ${src}.hh)
   add_library(${src} SHARED ${src}.cc ${${src}_MOC})
   target_link_libraries(${src}
-    ${IGNITION-COMMON_LIBRARIES}
-    ${IGNITION-GUI_LIBRARIES}
-    ${IGNITION-RENDERING_LIBRARIES}
-    ${Qt5Core_LIBRARIES}
-    ${Qt5Widgets_LIBRARIES})
+    ${PROJECT_LIBRARY_TARGET_NAME}
+    ${IGNITION-RENDERING_LIBRARIES})
 endforeach (src ${qt_headers_local})
 
