--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,7 +59,7 @@ set(IGN_TRANSPORT_VER ${ignition-transport6_VERSION_MAJOR})
 
 #--------------------------------------
 # Find ignition-rendering
-ign_find_package(ignition-rendering1 REQUIRED)
+ign_find_package(ignition-rendering1 REQUIRED COMPONENTS ogre)
 set(IGN_RENDERING_VER ${ignition-rendering1_VERSION_MAJOR})
 
 #--------------------------------------
