use ign_find_package for Qt5 and specify PKGCONFIG fields

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -76,12 +76,13 @@ endif()
 
 #--------------------------------------
 # Find QT
-find_package (Qt5
+ign_find_package (Qt5
   COMPONENTS
     Core
     Quick
     QuickControls2
   REQUIRED
+  PKGCONFIG "Qt5Core Qt5Quick Qt5QuickControls2"
 )
 
 #--------------------------------------
