add check to prevent segfault

--- a/examples/config/scene3d.config
+++ b/examples/config/scene3d.config
@@ -11,7 +11,7 @@
       <title>View 1</title>
       <property type="string" key="state">docked</property>
     </ignition-gui>
-    <engine>ogre</engine>
+    <engine>ogre2</engine>
     <scene>scene</scene>
     <ambient_light>0 0 1</ambient_light>
     <background_color>0.8 0.8 0.8</background_color>
