[gz11] Migrate ImageDisplay

--- a/examples/config/image.config
+++ b/examples/config/image.config
@@ -1,11 +1,16 @@
 <?xml version="1.0"?>
 
+<window>
+  <width>600</width>
+  <height>800</height>
+</window>
+
 <plugin filename="ImageDisplay">
   <topic_picker>false</topic_picker>
-  <topic>/rendering/image</topic>
+  <topic>/camera</topic>
   <title>Without picker</title>
 </plugin>
 
-<plugin filename="ImageDisplay">
+<!--plugin filename="ImageDisplay">
   <title>With picker</title>
-</plugin>
+</plugin-->
