--- a/include/ignition/gui/plugins/CMakeLists.txt
+++ b/include/ignition/gui/plugins/CMakeLists.txt
@@ -22,8 +22,13 @@ foreach (src ${qt_headers_local})
   QT5_WRAP_CPP(${src}_MOC ${src}.hh)
   add_library(${src} SHARED ${PROJECT_SOURCE_DIR}/src/plugins/${src}.cc ${${src}_MOC})
   target_link_libraries(${src}
-    ${PROJECT_LIBRARY_TARGET_NAME}
-    ${IGNITION-RENDERING_LIBRARIES})
+    PUBLIC
+      ${PROJECT_LIBRARY_TARGET_NAME}
+      ${IGNITION-RENDERING_LIBRARIES}
+      TINYXML2::TINYXML2
+     PRIVATE
+      ignition-plugin${IGN_PLUGIN_VER}::register 
+  )
   install (TARGETS ${src} DESTINATION ${IGNITION_GUI_PLUGIN_INSTALL_DIR})
 endforeach (src ${qt_headers_local})
 
