--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -40,30 +40,30 @@ pipelines:
             libignition-math6-dev
             libignition-msgs3-dev
             libignition-plugin-dev
-            libignition-rendering-dev
             libignition-tools-dev
             libignition-transport6-dev
+          #  libignition-rendering-dev
           # Ignition msgs (uncomment if a specific branch is needed)
-          - apt install -y
-            libprotobuf-dev protobuf-compiler libprotoc-dev
-          - hg clone http://bitbucket.org/ignitionrobotics/ign-msgs -b gz11
-          - cd ign-msgs
-          - mkdir build
-          - cd build
-          - cmake ..
-          - make -j4 install
-          - cd ../..
-          # Ignition rendering (uncomment if a specific branch is needed)
           # - apt install -y
-          #   libogre-1.9-dev
-          #   libglew-dev libfreeimage-dev freeglut3-dev libxmu-dev libxi-dev
-          # - hg clone http://bitbucket.org/ignitionrobotics/ign-rendering -b render_node_gz11
-          # - cd ign-rendering
+          #   libprotobuf-dev protobuf-compiler libprotoc-dev
+          # - hg clone http://bitbucket.org/ignitionrobotics/ign-msgs -b ign-msgs3
+          # - cd ign-msgs
           # - mkdir build
           # - cd build
           # - cmake ..
           # - make -j4 install
           # - cd ../..
+          # Ignition rendering (uncomment if a specific branch is needed)
+           - apt install -y
+             libogre-1.9-dev
+             libglew-dev libfreeimage-dev freeglut3-dev libxmu-dev libxi-dev
+           - hg clone http://bitbucket.org/ignitionrobotics/ign-rendering -b default
+           - cd ign-rendering
+           - mkdir build
+           - cd build
+           - cmake ..
+           - make -j4 install
+           - cd ../..
           # Ignition GUI
           - mkdir build
           - cd build
