customizable toolbar colors

--- a/examples/config/style_toolbars.config
+++ b/examples/config/style_toolbars.config
@@ -7,6 +7,14 @@
     material_theme="Dark"
     material_primary="Yellow"
     material_accent="#ff5555"
+    toolbar_color_light="#ff3333"
+    toolbar_text_color_light="Blue"
+    toolbar_color_dark="#aaaaff"
+    toolbar_text_color_dark="Red"
+    plugin_toolbar_color_light="#33ff33"
+    plugin_toolbar_text_color_light="#ffff44"
+    plugin_toolbar_color_dark="#ffaaff"
+    plugin_toolbar_text_color_dark="Yellow"
   />
 </window>
 
