--- a/examples/config/style_toolbars.config
+++ b/examples/config/style_toolbars.config
@@ -4,17 +4,17 @@
   <width>602</width>
   <height>767</height>
   <style
-    material_theme="Dark"
-    material_primary="Yellow"
-    material_accent="#ff5555"
-    toolbar_color_light="#ff3333"
-    toolbar_text_color_light="Blue"
-    toolbar_color_dark="#aaaaff"
-    toolbar_text_color_dark="Red"
-    plugin_toolbar_color_light="#33ff33"
-    plugin_toolbar_text_color_light="#ffff44"
-    plugin_toolbar_color_dark="#ffaaff"
-    plugin_toolbar_text_color_dark="Yellow"
+    material_theme="Light"
+    material_primary="Teal"
+    material_accent="Purple"
+    toolbar_color_light="#44ee44"
+    toolbar_text_color_light="#004400"
+    toolbar_color_dark="#004400"
+    toolbar_text_color_dark="#44ee44"
+    plugin_toolbar_color_light="#4444ee"
+    plugin_toolbar_text_color_light="#000044"
+    plugin_toolbar_color_dark="#000044"
+    plugin_toolbar_text_color_dark="#4444ee"
   />
 </window>
 
