--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -1,4 +1,4 @@
-image: ubuntu:xenial
+image: ubuntu:bionic
 
 pipelines:
   default:
@@ -10,25 +10,22 @@ pipelines:
           - apt-key adv --keyserver hkp://p80.pool.sks-keyservers.net:80 --recv-keys D2486D2DD83DB69272AFE98867170598AF249743
           - apt update
           - apt install -y
-            build-essential wget cmake cppcheck mercurial
+            build-essential wget cmake cppcheck git mercurial
             qtbase5-dev libqwt-qt5-dev libtinyxml2-dev libprotoc-dev libprotobuf-dev
             libignition-cmake1-dev
             libignition-common2-dev
-            libignition-math5-dev
+            libignition-math6-dev
             libignition-msgs2-dev
+            libignition-rendering2-dev
             libignition-tools-dev
             libignition-transport5-dev
-            libogre-1.9-dev
+          # lcov
+          - git clone https://github.com/linux-test-project/lcov.git -b v1.14
+          - cd lcov
+          - make install
+          - cd ..
           # Static checking before building
           - sh tools/code_check.sh
-          # Ignition rendering
-          - hg clone http://bitbucket.org/ignitionrobotics/ign-rendering -b ign-rendering0
-          - cd ign-rendering
-          - mkdir build
-          - cd build
-          - cmake .. # -DENABLE_TESTS_COMPILATION=false
-          - make -j4 install
-          - cd ../..
           # Ignition GUI
           - mkdir build
           - cd build
