--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -42,7 +42,7 @@ pipelines:
             libignition-tools-dev
             libignition-transport7-dev
             # libignition-rendering2-dev
-          # Ignition msgs (uncomment if a specific branch is needed)
+          # # Ignition msgs (uncomment if a specific branch is needed)
           # - apt install -y
           #   libprotobuf-dev protobuf-compiler libprotoc-dev
           # - hg clone http://bitbucket.org/ignitionrobotics/ign-msgs -b ign-msgs3
@@ -52,7 +52,7 @@ pipelines:
           # - cmake ..
           # - make -j4 install
           # - cd ../..
-          Ignition rendering (uncomment if a specific branch is needed)
+          # Ignition rendering (uncomment if a specific branch is needed)
           - apt install -y
             libogre-1.9-dev
             libogre-2.1-dev
