--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -37,21 +37,31 @@ pipelines:
             libignition-cmake2-dev
             libignition-common3-dev
             libignition-math6-dev
-            libignition-msgs4-dev
             libignition-plugin-dev
             libignition-tools-dev
-            libignition-transport7-dev
-            # libignition-rendering2-dev
-          # # Ignition msgs (uncomment if a specific branch is needed)
-          # - apt install -y
-          #   libprotobuf-dev protobuf-compiler libprotoc-dev
-          # - hg clone http://bitbucket.org/ignitionrobotics/ign-msgs -b ign-msgs3
-          # - cd ign-msgs
-          # - mkdir build
-          # - cd build
-          # - cmake ..
-          # - make -j4 install
-          # - cd ../..
+            # libignition-msgs5-dev
+            # libignition-transport8-dev
+            # libignition-rendering3-dev
+          # Ignition msgs (uncomment if a specific branch is needed)
+          - apt install -y
+            libprotobuf-dev protobuf-compiler libprotoc-dev
+          - hg clone http://bitbucket.org/ignitionrobotics/ign-msgs -b default
+          - cd ign-msgs
+          - mkdir build
+          - cd build
+          - cmake ..
+          - make -j4 install
+          - cd ../..
+          # Ignition transport (uncomment if a specific branch is needed)
+          - apt install -y
+            libzmq3-dev uuid-dev libsqlite3-dev
+          - hg clone http://bitbucket.org/ignitionrobotics/ign-transport -b default
+          - cd ign-transport
+          - mkdir build
+          - cd build
+          - cmake ..
+          - make -j4 install
+          - cd ../..
           # Ignition rendering (uncomment if a specific branch is needed)
           - apt install -y
             libogre-1.9-dev
