--- a/tutorials.md.in
+++ b/tutorials.md.in
@@ -10,6 +10,7 @@ Ignition @IGN_DESIGNATION_CAP@ library and how to use the library effectively.
 1. \subpage install "Installation"
 2. \subpage commandline "Command line usage"
 3. \subpage plugins "Plugins"
+3. \subpage config "Configuration files"
 4. \subpage layout "Layout"
 5. \subpage style "Style"
 6. \subpage examples "Examples"
