Protect against null tinyxml GetText

--- a/src/plugins/CMakeLists.txt
+++ b/src/plugins/CMakeLists.txt
@@ -1,6 +1,7 @@
 # No need to add plugins to sources, they will be found when building the
 # shared libraries
 
+# Tests
 set (gtest_local_sources
   WorldControl
   WorldStats
