depend on rendering4

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -40,9 +40,9 @@ pipelines:
             libignition-math6-dev
             libignition-msgs5-dev
             libignition-plugin-dev
-            libignition-rendering3-dev
             libignition-tools-dev
             libignition-transport8-dev
+          #  libignition-rendering3-dev
           # # Ignition msgs (uncomment if a specific branch is needed)
           # - apt install -y
           #   libprotobuf-dev protobuf-compiler libprotoc-dev
@@ -63,18 +63,18 @@ pipelines:
           # - cmake ..
           # - make -j4 install
           # - cd ../..
-          # # Ignition rendering (uncomment if a specific branch is needed)
-          # - apt install -y
-          #   libogre-1.9-dev
-          #   libogre-2.1-dev
-          #   libglew-dev libfreeimage-dev freeglut3-dev libxmu-dev libxi-dev
-          # - hg clone http://bitbucket.org/ignitionrobotics/ign-rendering -b default
-          # - cd ign-rendering
-          # - mkdir build
-          # - cd build
-          # - cmake ..
-          # - make -j4 install
-          # - cd ../..
+          # Ignition rendering (uncomment if a specific branch is needed)
+          - apt install -y
+            libogre-1.9-dev
+            libogre-2.1-dev
+            libglew-dev libfreeimage-dev freeglut3-dev libxmu-dev libxi-dev
+          - hg clone http://bitbucket.org/ignitionrobotics/ign-rendering -b default
+          - cd ign-rendering
+          - mkdir build
+          - cd build
+          - cmake ..
+          - make -j4 install
+          - cd ../..
           # Ignition GUI
           - mkdir build
           - cd build
